# Sentinel

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  premake5.lua
Engine/: CMakeLists.txt  premake5.lua
Engine/Resources/Images/Icon/: 128.inl  256.inl  32.inl  64.inl
Engine/Resources/Shaders/: TestShader.hlsl  TextureShader.hlsl
Engine/Source/: Sentinel.h  stpch.h
Engine/Source/Platform/DirectX11/: DirectX11Context.cpp  DirectX11Context.h  DirectX11Internal.cpp  DirectX11Internal.h  DirectX11RendererAPI.cpp  DirectX11RendererAPI.h
Engine/Source/Platform/GLFW/: GLFWWindow.cpp  GLFWWindow.h
Engine/Source/Platform/ImGui/: ImGuiLayer.cpp
Engine/Source/Platform/OpenGL/: OpenGLContext.cpp  OpenGLContext.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h
Engine/Source/Platform/Windows/: WindowsFilesystem.cpp  WindowsInput.cpp  WindowsTextUtils.h  WindowsWindow.cpp  WindowsWindow.h  WindowsZipFileOperations.cpp
Engine/Source/Platform/Windows/Filesystem/: WindowsFilesystem.cpp  WindowsZipFileOperations.cpp
Engine/Source/Platform/Windows/GLFW/: GLFWInput.cpp  GLFWWindow.cpp  GLFWWindow.h
Engine/Source/Platform/Windows/ImGui/: ImGuiLayer.cpp
Engine/Source/Platform/Windows/Utils/: WindowsStringUtils.cpp  WindowsStringUtils.h
Engine/Source/Sentinel/Application/: Application.cpp  Application.h  EntryPoint.h
Engine/Source/Sentinel/Archive/: ZipFileOperations.h
Engine/Source/Sentinel/AssetManagement/: Asset.h  AssetInfo.h  AssetManager.cpp  AssetManager.h  AssetRegistryManager.cpp  AssetRegistryManager.h
Engine/Source/Sentinel/Base/: Assert.h  DataTypes.h  Define.h  EntryPoint.h  Ref.h  STL.cpp  STL.h  STLSwitch.h
Engine/Source/Sentinel/Common/: Common.h  CommonMinimal.h
Engine/Source/Sentinel/Common/Core/: STL.h  (+11 more)
Engine/Source/Sentinel/ECS/: Components.h  Entity.cpp  Entity.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h
Engine/Source/Sentinel/Events/: Event.cpp  Event.h  EventBus.cpp  EventBus.h
Engine/Source/Sentinel/Filesystem/: Filesystem.cpp  Filesystem.h  VirtualFilesystem.cpp  VirtualFilesystem.h
Engine/Source/Sentinel/Input/: Input.h  KeyCodes.h  MouseCodes.h
Engine/Source/Sentinel/Layers/: Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h
Engine/Source/Sentinel/Logging/: Log.cpp  Log.h
Engine/Source/Sentinel/Math/: Math.cpp  Math.h  SIMD.cpp  SIMD.h
Engine/Source/Sentinel/Memory/: FixedSlabAllocator.cpp  FixedSlabAllocator.h  Malloc.h  MemoryManager.cpp  MemoryManager.h  PoolAllocator.h  PoolAllocatorBitset.h
Engine/Source/Sentinel/Resources/: ImageResourceLoader.cpp  ImageResourceLoader.h  Resource.h
Engine/Source/Sentinel/Serialization/: Cerealizer.h  TCerealizable.h  TCerealizer.h
Engine/Source/Sentinel/System/: UUID.cpp  UUID.h
Engine/Source/Sentinel/Utilities/: StringUtils.cpp  StringUtils.h  TSingleton.h
Engine/Source/Sentinel/Window/: Window.cpp  Window.h
Scribe/: CMakeLists.txt  Logo.sibf  Test.pak  imgui.ini  premake5.lua
Scribe/Assets/Icons/Spritesheets/: ContentBrowserSpriteSheet.inl  TitleBar_SpriteSheet.inl
Scribe/Assets/Icons/Title/: SpriteSheet.inl  close_dark20.inl  iconbw64.inl  maximize_dark20.inl  minimize_dark20.inl  restore_down_dark20.inl
Scribe/Assets/Shaders/: Base.hlsl
Scribe/Source/: Scribe.cpp  Scribe.h
Scribe/Source/Panels/: ContentBrowserPanel.cpp  ContentBrowserPanel.h  RenderInfoPanel.cpp  RenderInfoPanel.h  SceneHierarchyPanel.cpp  SceneHierarchyPanel.h  ViewportPanel.cpp  ViewportPanel.h
Scribe/Source/Renderer/: EditorRenderer.cpp  EditorRenderer.h  ImGuiBase.cpp  ImGuiBase.h  SceneRenderer.cpp  SceneRenderer.h  ScribeImGuiBase.cpp  ScribeImGuiBase.h  ScribeRenderer.cpp  ScribeRenderer.h  ScribeSceneRenderer.h
Scribe/Source/Window/: EditorWindow.cpp  EditorWindow.h  ScribeWindow.cpp  ScribeWindow.h
(+443 files in other folders)
